--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "build:prod": "cross-env NODE_ENV=production env_config=prod node build/build.js",
+    "build:prod": "cross-env NODE_ENV=production npm_config_preview=true  env_config=prod node build/build.js",
     "build:sit": "cross-env NODE_ENV=production env_config=sit node build/build.js",
     "lint": "eslint --ext .js,.vue src",
     "test": "npm run lint"
@@ -16,9 +16,11 @@
     "axios": "0.17.1",
     "clipboard": "1.7.1",
     "codemirror": "5.32.0",
+    "compression-webpack-plugin": "^1.1.11",
     "dropzone": "5.2.0",
     "echarts": "3.8.5",
     "element-ui": "2.0.8",
+    "express": "^4.16.3",
     "file-saver": "1.3.3",
     "font-awesome": "4.7.0",
     "js-cookie": "2.2.0",
@@ -66,6 +68,7 @@
     "html-webpack-plugin": "2.30.1",
     "node-notifier": "5.1.2",
     "node-sass": "^4.7.2",
+    "open": "0.0.5",
     "optimize-css-assets-webpack-plugin": "3.2.0",
     "ora": "1.3.0",
     "portfinder": "1.0.13",
